--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
-    "@storybook/addon-a11y": "^5.1.9",
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/addons": "^5.1.9",
-    "@storybook/react": "^5.1.9",
+    "@storybook/addon-a11y": "^5.2.0-beta.17",
+    "@storybook/addon-actions": "^5.2.0-beta.17",
+    "@storybook/addon-docs": "^5.2.0-beta.17",
+    "@storybook/addon-links": "^5.2.0-beta.17",
+    "@storybook/addon-notes": "^5.2.0-beta.17",
+    "@storybook/addons": "^5.2.0-beta.17",
+    "@storybook/react": "^5.2.0-beta.17",
     "babel-loader": "^8.0.6",
+    "husky": "^3.0.2",
     "nwb": "0.23.x",
+    "prettier": "1.18.2",
+    "pretty-quick": "^1.11.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
@@ -39,5 +44,10 @@
   },
   "keywords": [
     "react-component"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
