--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "react": "16.x"
+    "react": "16.x",
+    "styled-components": "^4.x"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -32,8 +33,10 @@
     "nwb": "0.23.x",
     "prettier": "1.18.2",
     "pretty-quick": "^1.11.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.3.2"
   },
   "author": "William R. Crutchfield <william.r.crutchfield@gmail.com>",
   "homepage": "https://github.com/CrutchTheClutch/envelope-ui#readme",
