--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "envelope-ui",
-  "version": "0.0.1",
+  "name": "test-envelope-ui",
+  "version": "0.0.3",
   "description": "envelope-ui React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -25,12 +25,13 @@
     "@storybook/addon-actions": "^5.2.0-beta.17",
     "@storybook/addon-docs": "^5.2.0-beta.17",
     "@storybook/addon-links": "^5.2.0-beta.17",
-    "@storybook/addon-notes": "^5.2.0-beta.17",
     "@storybook/addons": "^5.2.0-beta.17",
     "@storybook/react": "^5.2.0-beta.17",
+    "@storybook/theming": "^5.2.0-beta.17",
     "babel-loader": "^8.0.6",
     "husky": "^3.0.2",
     "nwb": "0.23.x",
+    "polished": "^3.4.1",
     "prettier": "1.18.2",
     "pretty-quick": "^1.11.1",
     "prop-types": "^15.7.2",
