--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "react": "16.x",
+    "react": "^16.x",
+    "prismjs": "^1.17.x",
     "styled-components": "^4.x"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "nwb": "0.23.x",
     "prettier": "1.18.2",
     "pretty-quick": "^1.11.1",
+    "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
