change build path
This allows master commits to be deployed automatically to Zeit

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "npm": ">=5"
   },
   "scripts": {
-    "build": "build-storybook -c .storybook -o public",
+    "build": "build-storybook -c .storybook -o build",
     "start": "start-storybook",
     "dev": "start-storybook -p 6006 || $PORT"
   },
