--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
   - 9
   - 8
+install:
+  - npm install
 jobs:
   include:
     # Define the release stage that runs semantic-release
