--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/parser": "^2.11.0",
     "cross-env": "^5.1.4",
     "eslint": "^6.7.2",
+    "node-sass": "^4.13.0",
     "prettier-eslint": "^9.0.1",
     "prismjs": "^1.17.1",
     "react": "^16.4.1",
@@ -53,8 +54,8 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "styled-components": "^4.4.1",
-    "semantic-release": "^15.13.31"
+    "semantic-release": "^15.13.31",
+    "styled-components": "^4.4.1"
   },
   "files": [
     "dist"
