--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "npm": ">=5"
   },
   "scripts": {
-    "build": "build-storybook -c .storybook -o build",
+    "build": "build-storybook -c .storybook -o build && rollup -c",
     "start": "start-storybook",
     "dev": "start-storybook -p 6006 || $PORT",
     "semantic-release": "semantic-release"
