--- a/package.json
+++ b/package.json
@@ -29,35 +29,38 @@
     "styled-components": "^4.x"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@rollup/plugin-url": "^4.0.0",
-    "@storybook/addon-a11y": "^5.2.8",
-    "@storybook/addon-actions": "^5.2.8",
-    "@storybook/addon-docs": "^5.2.8",
-    "@storybook/addon-links": "^5.2.8",
-    "@storybook/addons": "^5.2.8",
-    "@storybook/react": "^5.2.8",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@rollup/plugin-url": "^4.0.2",
+    "@storybook/addon-a11y": "^5.3.18",
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-docs": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
+    "@storybook/react": "^5.3.18",
     "@svgr/rollup": "^2.4.1",
-    "@typescript-eslint/parser": "^2.11.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "cross-env": "^5.1.4",
     "eslint": "^6.7.2",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "prettier-eslint": "^9.0.1",
-    "prismjs": "^1.17.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "^3.3.0",
-    "rollup": "^1.27.12",
-    "rollup-plugin-babel": "^4.3.3",
+    "prismjs": "^1.20.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
+    "rollup": "^1.32.1",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "semantic-release": "^15.13.31",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-postcss": "^2.5.0",
+    "semantic-release": "^15.14.0",
     "styled-components": "^4.4.1"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "@quickbaseoss/babel-plugin-styled-components-css-namespace": "^1.0.0-rc4"
+  }
 }
