--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@storybook/addon-a11y": "^5.3.18",
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-docs": "^5.3.18",
+    "@storybook/addon-essentials": "^5.3.18",
     "@storybook/addon-links": "^5.3.18",
+    "@storybook/addon-storysource": "^5.3.18",
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
@@ -43,7 +45,9 @@
     "@typescript-eslint/parser": "^2.27.0",
     "cross-env": "^5.1.4",
     "eslint": "^6.7.2",
+    "i": "^0.3.6",
     "node-sass": "^4.13.1",
+    "npm": "^6.14.4",
     "prettier-eslint": "^9.0.1",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
@@ -56,6 +60,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-postcss": "^2.5.0",
     "semantic-release": "^15.14.0",
+    "storybook-addon-deps": "^2.0.0",
     "styled-components": "^4.4.1"
   },
   "files": [
