--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,8 @@ on:
     branches:
       - master
 jobs:
-  release:
-    name: Release
+  release-github:
+    name: Release - Github Packages
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout
@@ -23,10 +23,23 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
+  release-npm:
+    name: Release - NPM
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - name: Install dependencies
+        run: npm ci
       - name: NPM - Prepare to Publish
         run: npm config set registry https://registry.npmjs.org/
       - name: NPM - Publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish
+        run: npx semantic-release
+        
