--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,26 +4,7 @@ on:
     branches:
       - master
 jobs:
-  release-github:
-    name: Release - Github Packages
-    runs-on: ubuntu-18.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - name: Install Dependencies
-        run: npm ci
-      - name: Github Packages - Prepare to Publish
-        run: npm config set registry https://npm.pkg.github.com/
-      - name: Github Packages - Publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
-  release-npm:
+  release:
     name: Release - NPM
     runs-on: ubuntu-18.04
     steps:
