--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       - master
 jobs:
   release:
-    name: Release - NPM
+    name: Release
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout
@@ -16,11 +16,8 @@ jobs:
           node-version: 12
       - name: Install Dependencies
         run: npm ci
-      - name: NPM - Prepare to Publish
-        run: npm config set registry https://registry.npmjs.org/
-      - name: NPM - Publish
+      - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
-        
