docs: update README

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
-name: Release
+name: Build
 on:
   push:
     branches:
       - master
 jobs:
   release:
-    name: Release
+    name: Build
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout
