--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
 jobs:
-  release:
+  build:
     name: Build
     runs-on: ubuntu-18.04
     steps:
@@ -16,7 +16,7 @@ jobs:
           node-version: 12
       - name: Install Dependencies
         run: npm ci
-      - name: Release
+      - name: Build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
