--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "@storybook/addon-links": "^5.3.18",
     "@storybook/addon-storysource": "^5.3.18",
     "@storybook/addons": "^5.3.18",
+    "@storybook/components": "^5.3.19",
     "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
+    "@storybook/source-loader": "^5.3.19",
     "@svgr/rollup": "^5.3.1",
     "@typescript-eslint/parser": "^2.29.0",
     "cz-conventional-changelog": "^3.1.0",
