--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "commit": "npx git-cz",
     "format": "prettier-eslint --write \"src/**/*.js\" \"src/**/*.mdx\"",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook --docs"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
@@ -38,24 +38,23 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@rollup/plugin-babel": "^5.2.0",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-url": "^4.0.2",
-    "@storybook/addon-actions": "^6.0.10",
-    "@storybook/addon-docs": "^6.0.10",
-    "@storybook/addon-essentials": "^6.0.10",
-    "@storybook/addon-links": "^6.0.10",
-    "@storybook/react": "^6.0.10",
+    "@storybook/addon-actions": "^6.0.22",
+    "@storybook/addon-backgrounds": "^6.0.22",
+    "@storybook/addon-docs": "^6.0.22",
+    "@storybook/react": "^6.0.22",
     "@svgr/rollup": "^5.3.1",
     "babel-loader": "^8.1.0",
     "cz-conventional-changelog": "^3.1.0",
+    "polished": "^3.6.7",
     "prettier-eslint-cli": "^5.0.0",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-is": "^16.13.1",
     "rollup": "^1.32.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-postcss": "^3.1.1",
     "styled-components": "^4.4.1"
