--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-url": "^4.0.2",
-    "@storybook/addon-actions": "^6.0.22",
-    "@storybook/addon-backgrounds": "^6.0.22",
-    "@storybook/addon-docs": "^6.0.22",
-    "@storybook/react": "^6.0.22",
+    "@storybook/addon-actions": "^6.0.26",
+    "@storybook/addon-backgrounds": "^6.0.26",
+    "@storybook/addon-docs": "^6.0.26",
+    "@storybook/react": "^6.0.26",
     "@svgr/rollup": "^5.3.1",
     "babel-loader": "^8.1.0",
     "cz-conventional-changelog": "^3.1.0",
@@ -54,10 +54,12 @@
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "reakit": "^1.2.5",
     "rollup": "^1.32.1",
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-postcss": "^3.1.1",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "styled-system": "^5.1.5"
   },
   "files": [
     "dist"
@@ -66,5 +68,6 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "dependencies": {}
 }
