--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/clutchd/ui.git"
+    "url": "https://github.com/CrutchTheClutch/ui.git"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
