--- a/package.json
+++ b/package.json
@@ -19,42 +19,23 @@
     "npm": ">=5"
   },
   "scripts": {
-    "build": "build-storybook -c .storybook -o build && rollup -c",
-    "start": "start-storybook",
-    "dev": "start-storybook -p 6006 || $PORT",
-    "prepare": "npm run format && npm run build",
-    "commit": "npx git-cz",
-    "format": "prettier-eslint --write \"src/**/*.js\" \"src/**/*.mdx\"",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook --docs"
+    "dev": "start-storybook -p 6006 || $PORT"
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-react": "^7.9.4",
-    "@rollup/plugin-babel": "^5.2.0",
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-url": "^4.0.2",
     "@storybook/addon-actions": "^6.0.26",
     "@storybook/addon-backgrounds": "^6.0.26",
     "@storybook/addon-docs": "^6.0.26",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/react": "^6.0.26",
-    "@svgr/rollup": "^5.3.1",
-    "babel-loader": "^8.1.0",
     "cz-conventional-changelog": "^3.1.0",
-    "polished": "^3.6.7",
     "prettier-eslint-cli": "^5.0.0",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "reakit": "^1.2.5",
-    "rollup": "^1.32.1",
-    "rollup-plugin-peer-deps-external": "^2.2.2",
-    "rollup-plugin-postcss": "^3.1.1"
+    "react-dom": "^16.13.1"
   },
   "files": [
     "dist"
