--- a/package.json
+++ b/package.json
@@ -21,19 +21,22 @@
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react-dom": "^15.0.0 || ^16.0.0",
+    "tailwindcss": "^2.0.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.0.26",
     "@storybook/addon-backgrounds": "^6.0.26",
     "@storybook/addon-docs": "^6.0.26",
-    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addons": "^6.2.9",
     "@storybook/react": "^6.0.26",
+    "@storybook/theming": "^6.2.9",
     "cz-conventional-changelog": "^3.1.0",
     "prettier-eslint-cli": "^5.0.0",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "tailwindcss": "^2.1.4"
   },
   "files": [
     "dist"
@@ -42,8 +45,5 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  },
-  "dependencies": {
-    "tailwindcss": "^1.9.5"
   }
 }
