--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0",
-    "tailwindcss": "^2.0.0"
+    "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.0.26",
@@ -35,8 +34,7 @@
     "prettier-eslint-cli": "^5.0.0",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "tailwindcss": "^2.1.4"
+    "react-dom": "^16.13.1"
   },
   "files": [
     "dist"
@@ -45,5 +43,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "tailwindcss": "^2.1.4"
   }
 }
