--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.0.26",
-    "@storybook/addon-backgrounds": "^6.0.26",
-    "@storybook/addon-docs": "^6.0.26",
+    "@storybook/addon-actions": "^6.3.0-rc.5",
+    "@storybook/addon-backgrounds": "^6.3.0-rc.5",
+    "@storybook/addon-docs": "^6.3.0-rc.5",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/react": "^6.0.26",
-    "cz-conventional-changelog": "^3.1.0",
-    "prettier-eslint-cli": "^5.0.0",
-    "prismjs": "^1.20.0",
+    "@storybook/react": "^6.3.0-rc.5",
+    "cz-conventional-changelog": "^3.3.0",
+    "prettier-eslint-cli": "^5.0.1",
+    "prismjs": "^1.23.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -44,6 +44,8 @@
     }
   },
   "dependencies": {
-    "tailwindcss": "^1.9.5"
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.4",
+    "tailwindcss": "^2.1.4"
   }
 }
