--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14, 15, 16]
+        node-version: [15, 16]
 
     steps:
       - uses: actions/checkout@v2
