--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,4 +41,6 @@ jobs:
 
       - run: npm test && codecov
 
-      - run: npx semantic-release
+      - name: Release
+        if: github.ref == 'refs/heads/master'
+        run: npx semantic-release
