--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "prettier-eslint-cli": "^5.0.1",
     "prismjs": "^1.23.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "typescript": "^4.3.2"
   },
   "files": [
     "dist"
