--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "build": "build-storybook -c .storybook -o build",
+    "build": "build-storybook -c .storybook -o build && tsc -p .",
     "start": "start-storybook",
     "dev": "start-storybook -p 6006 || $PORT",
     "prepare": "npm run format && npm run build",
