--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm install -g codecov && npm install
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm install -g codecov
 
       - run: npm run format
 
