--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,9 +30,9 @@ jobs:
             nodeModules-
 
       - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+      - if: steps.cache.outputs.cache-hit != 'true'
         run: npm install -g codecov && npm install
-        if: steps.cache.outputs.cache-hit != 'true'
+      - if: steps.cache.outputs.cache-hit != 'true'
         run: npm install -g codecov
 
       - run: npm run format
