--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "verbose": true
   },
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react": ">=16.13.1",
+    "react-dom": ">=16.13.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.2.9",
