--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
-    "declarationDir": "dist/types",
+    "declarationDir": "dist",
     "strict": true,
     "importHelpers": true,
     "skipLibCheck": true,
@@ -18,7 +18,7 @@
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "jsx": "preserve"
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
