--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "files": [
     "dist"
   ],
+  "main": "dist/index.js",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
