--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "@storybook/react": "^6.2.9",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
+    "@types/classnames": "^2.3.1",
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.11",
     "cz-conventional-changelog": "^3.3.0",
     "jest": "^27.0.4",
-    "next": "^10.2.3",
     "prettier-eslint-cli": "^5.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -57,7 +57,6 @@
   "files": [
     "dist"
   ],
-  "main": "dist/index.js",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
@@ -65,6 +64,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.6",
+    "classnames": "^2.2.6",
+    "next": "^10.2.3",
     "postcss": "^8.3.4",
     "tailwindcss": "^2.1.4"
   }
