--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/classnames": "^2.3.1",
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
     "cz-conventional-changelog": "^3.3.0",
     "jest": "^27.0.4",
     "prettier-eslint-cli": "^5.0.1",
