--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react-dom": "^16.13.1",
     "typescript": "^4.3.2"
   },
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "files": [
     "dist"
   ],
@@ -65,7 +65,6 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.6",
-    "classnames": "^2.2.6",
     "next": "^10.2.3",
     "postcss": "^8.3.4",
     "tailwindcss": "^2.1.4"
