--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "typeRoots": ["index.d.ts", "node_modules/@types"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
