--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "@storybook/react": "^6.4.9",
     "@types/react-dom": "^17.0.11",
+    "framer-motion": "^5.5.5",
     "next": "^12.0.7",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.8"
