--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "noImplicitAny": false,
     "typeRoots": ["index.d.ts", "node_modules/@types"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
