--- a/package.json
+++ b/package.json
@@ -1,74 +1,24 @@
 {
-  "name": "@clutchd/ui",
-  "version": "0.0.0-development",
-  "description": "A React component library designed around consistent, and simple web design.",
-  "author": "clutchd",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/CrutchTheClutch/ui.git"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
-  },
-  "scripts": {
-    "build-storybook": "rm -rf build && build-storybook -c .storybook -o build",
-    "build-components": "rm -rf dist && tsc -p .",
-    "clean": "npm run prettier && npm run lint",
-    "start": "start-storybook",
-    "dev": "start-storybook -p 6006 || $PORT",
-    "commit": "npx git-cz",
-    "prettier": "prettier --write .",
-    "lint": "eslint --fix",
-    "test": "jest"
-  },
-  "jest": {
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.{ts,tsx}",
-      "!src/**/index.{ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "verbose": true
-  },
-  "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "main": "dist/src/index.js",
-  "files": [
-    "dist"
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "apps/*"
   ],
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev --no-cache --parallel --continue",
+    "lint": "turbo run lint",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "turbo run build --filter=docs^... && changeset publish"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.4.9",
-    "@storybook/addon-backgrounds": "^6.4.9",
-    "@storybook/addon-docs": "^6.4.9",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@types/jest": "^27.4.0",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "clsx": "^1.1.1",
-    "eslint": "^8.6.0",
-    "eslint-config-next": "^12.0.7",
-    "jest": "^27.4.5",
+    "@changesets/cli": "^2.22.0",
+    "eslint": "^8.15.0",
+    "eslint-config-acme": "*",
     "prettier": "^2.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.5.4"
-  },
-  "dependencies": {
-    "@storybook/react": "^6.4.9",
-    "framer-motion": "^5.5.5",
-    "next": "^12.0.7",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.8"
+    "turbo": "latest"
   }
 }
