--- a/packages/eslint-config-clutchd/package.json
+++ b/packages/eslint-config-clutchd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config",
+  "name": "eslint-config-clutchd",
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
