--- a/packages/clutchd-eslintconfig/package.json
+++ b/packages/clutchd-eslintconfig/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-clutchd",
+  "name": "@clutchd/eslintconfig",
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
