--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -23,7 +23,7 @@
     "@storybook/react": "^6.4.18",
     "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.8",
-    "eslint-config-clutchd": "*",
+    "@clutchd/eslintconfig": "*",
     "postcss": "^8.4.16",
     "serve": "^13.0.2",
     "tailwindcss": "^3.1.8",
