--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,7 @@
       "outputs": [
         "coverage/**"
       ],
-      "dependsOn": []
+      "dependsOn": ["^build", "build"]
     },
     "lint": {
       "outputs": []
