--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,5 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["@clutchd/docs"]
+  "ignore": ["@clutchd/config", "@clutchd/tsconfig"]
 }
