--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -18,17 +18,13 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^13.2.0",
-    "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.1",
     "@types/react": "^17.0.37",
-    "@types/react-dom": "^18.0.5",
     "config": "*",
-    "jest-environment-jsdom": "^28.1.2",
+    "eslint-config-next": "^12.2.5",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.13",
     "react": "^18.1.0",
-    "tailwindcss": "^3.0.24",
     "ts-jest": "^28.0.5",
-    "tsconfig": "*",
     "tsup": "^5.12.6",
     "typescript": "^4.5.5"
   },
