Component now acts as an extendable html tag.
'as' prop has been temporarily removed.

--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -23,7 +23,7 @@
     "config": "*",
     "eslint-config-next": "^12.2.5",
     "eslint-config-prettier": "^8.5.0",
-    "postcss": "^8.4.13",
+    "jest-environment-jsdom": "^28.1.2",
     "react": "^18.1.0",
     "ts-jest": "^28.0.5",
     "tsup": "^5.12.6",
