--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "eslint-config-next": "^12.2.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "7.28.0",
-    "next-transpile-modules": "9.0.0"
+    "tailwindcss": "^3.1.8"
   }
 }
