--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -33,5 +33,8 @@
     "next": "^12.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
+  },
+  "dependencies": {
+    "@radix-ui/react-compose-refs": "^1.0.0"
   }
 }
