--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -13,7 +13,7 @@
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "clean": "rm -rf .turbo node_modules dist coverage",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "prepublish": "npm run build"
   },
   "devDependencies": {
