--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -17,10 +17,11 @@
     "prepublish": "npm run build"
   },
   "devDependencies": {
+    "@clutchd/config": "*",
+    "@clutchd/tsconfig": "*",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^13.2.0",
     "@types/react": "^18.0.17",
-    "config": "*",
     "eslint-config-next": "^12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "jest-environment-jsdom": "^28.1.2",
