--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@clutchd/website",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "clean": "rm -rf .next node_modules coverage package-lock.json",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/tsconfig": "*",
     "@types/node": "^18.7.9",
     "@types/react": "^18.0.17",
     "eslint": "^8.22.0",
