--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
-    "config": "*",
+    "@clutchd/config": "*",
     "eslint-config-next": "^12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.5.1",
