--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -17,11 +17,12 @@
     "prepublish": "npm run build"
   },
   "devDependencies": {
+    "@clutchd/config": "*",
+    "@clutchd/tsconfig": "*",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^13.2.0",
     "@types/react": "^18.0.17",
     "autoprefixer": "^10.4.8",
-    "config": "*",
     "eslint-config-next": "^12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "jest-environment-jsdom": "^28.1.2",
