--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -12,24 +12,18 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
-    "clean": "rm -rf .turbo node_modules dist coverage",
+    "clean": "rm -rf .next .turbo node_modules coverage package-lock.json",
     "test": "jest --passWithNoTests",
     "prepublish": "npm run build"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/tsconfig": "*",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^13.2.0",
     "@types/react": "^18.0.17",
-    "autoprefixer": "^10.4.8",
     "eslint-config-next": "^12.2.5",
     "eslint-config-prettier": "^8.5.0",
-    "jest-environment-jsdom": "^28.1.2",
     "next-auth": "^4.10.3",
     "postcss": "^8.4.16",
     "react": "^18.1.0",
-    "tailwindcss": "^3.1.8",
     "ts-jest": "^28.0.5",
     "tsup": "^5.12.6",
     "typescript": "^4.5.5"
