--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.6",
   "private": true,
   "scripts": {
-    "clean": "rm -rf .next node_modules coverage package-lock.json",
+    "clean": "rm -rf .next .turbo node_modules coverage package-lock.json",
     "dev": "next dev",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md}\"",
     "build": "next build",
@@ -13,21 +13,15 @@
   "dependencies": {
     "@clutchd/layout": "^0.11.0",
     "@clutchd/text": "^0.3.7",
-    "autoprefixer": "^10.4.8",
     "next": "^12.2.5",
-    "postcss": "^8.4.16",
-    "postcss-import": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.1.8"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/tsconfig": "*",
-    "@types/node": "^18.7.9",
-    "@types/react": "^18.0.17",
     "eslint": "^8.22.0",
     "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
