--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -1,14 +1,7 @@
 {
   "extends": "@clutchd/tsconfig/react-library.json",
-  "include": [
-    ".",
-    "stripe.d.ts"
-  ],
-  "exclude": [
-    "dist",
-    "build",
-    "node_modules"
-  ],
+  "include": [".", "stripe.d.ts"],
+  "exclude": ["dist", "build", "node_modules"],
   "compilerOptions": {
     "allowJs": true,
     "noEmit": true,
