--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -12,17 +12,14 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
-    "clean": "rm -rf .turbo node_modules dist coverage",
-    "test": "jest",
+    "clean": "rm -rf .next .turbo node_modules coverage package-lock.json",
+    "test": "jest --passWithNoTests",
     "prepublish": "npm run build"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/tsconfig": "*",
     "eslint-config-next": "^12.2.5",
     "eslint-config-prettier": "^8.5.0",
-    "jest-environment-jsdom": "^28.1.2",
-    "ts-jest": "^28.0.5",
     "tsup": "^5.12.6",
     "typescript": "^4.5.5"
   },
