--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -12,19 +12,17 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
-    "clean": "rm -rf .turbo node_modules dist coverage",
+    "clean": "rm -rf .next .turbo node_modules coverage package-lock.json",
     "test": "jest",
     "prepublish": "npm run build"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/tsconfig": "*",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^13.2.0",
     "@types/react": "^18.0.17",
     "eslint-config-next": "^12.2.5",
     "eslint-config-prettier": "^8.5.0",
-    "jest-environment-jsdom": "^28.1.2",
     "react": "^18.1.0",
     "ts-jest": "^28.0.5",
     "tsup": "^5.12.6",
