--- a/packages/is-empty/package.json
+++ b/packages/is-empty/package.json
@@ -12,13 +12,12 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
-    "clean": "rm -rf .turbo node_modules dist coverage",
+    "clean": "rm -rf .next .turbo node_modules coverage package-lock.json",
     "test": "jest",
     "prepublish": "npm run build"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/tsconfig": "*",
     "eslint-config-next": "^12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "jest-environment-jsdom": "^28.1.2",
