--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -10,11 +10,10 @@
   "sideEffects": false,
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
+    "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
-    "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
-    "clean": "rm -rf .next .turbo node_modules coverage package-lock.json",
-    "test": "jest --passWithNoTests",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "jest --passWithNoTests"
   },
   "devDependencies": {
     "tsup": "^5.12.6",
