--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/tailwind": "0.7.0",
     "postcss": "^8.4.16",
     "react": "^18.1.0",
     "ts-jest": "^29.0.3",
@@ -30,7 +31,6 @@
   },
   "dependencies": {
     "@clutchd/component": "^0.7.1",
-    "@clutchd/clsx": "0.1.1",
-    "@clutchd/tailwind": "0.7.0"
+    "@clutchd/clsx": "0.1.1"
   }
 }
