--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/tailwind": "0.7.0",
     "postcss": "^8.4.16",
     "react": "^18.1.0",
     "ts-jest": "^29.0.3",
@@ -31,7 +32,6 @@
   "dependencies": {
     "@clutchd/clsx": "0.1.1",
     "@clutchd/component": "^0.7.1",
-    "@clutchd/flex": "0.1.6",
-    "@clutchd/tailwind": "0.7.0"
+    "@clutchd/flex": "0.1.6"
   }
 }
