--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -6,21 +6,34 @@
     "build": "next build",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "next dev",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md}\"",
     "start": "next start"
   },
   "dependencies": {
-    "@clutchd/layout": "^0.11.4",
-    "@clutchd/text": "^0.3.12",
+    "@clutchd/avatar": "*",
+    "@clutchd/card": "*",
+    "@clutchd/clsx": "*",
+    "@clutchd/component": "*",
+    "@clutchd/divider": "*",
+    "@clutchd/flex": "*",
+    "@clutchd/grid": "*",
+    "@clutchd/is-empty": "*",
+    "@clutchd/layout": "*",
+    "@clutchd/link": "*",
+    "@clutchd/protect": "*",
+    "@clutchd/skeleton": "*",
+    "@clutchd/text": "*",
     "next": "^13.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/tailwind": "*",
+    "@clutchd/tsconfig": "*",
+    "@types/react": "^18.0.14",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.2.1"
+    "tailwindcss": "^3.2.1",
+    "typescript": "^4.8.4"
   }
 }
