--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "eslint-config-next": "^13.0.5",
     "eslint-config-prettier": "^8.3.0",
-    "tailwindcss": "^3.1.8"
+    "next-transpile-modules": "10.0.0",
+    "tailwindcss": "^3.2.1"
   }
 }
