--- a/package.json
+++ b/package.json
@@ -1,28 +1,38 @@
 {
+  "name": "clutchd",
+  "version": "0.0.0",
   "private": true,
   "workspaces": [
-    "packages/*",
-    "apps/*"
+    "apps/*",
+    "packages/*"
   ],
   "scripts": {
     "build": "turbo run build",
     "changeset": "changeset",
-    "clean": "turbo run clean && rm -rf .next .turbo node_modules coverage dist package-lock.json",
+    "clean": "turbo run clean && rm -rf .next .turbo node_modules coverage package-lock.json",
     "dev": "turbo run dev --no-cache --parallel",
     "format": "prettier --write \"**/*.{js,json,jsx,ts,tsx,md,mdx}\"",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix",
     "release": "turbo run build && changeset publish",
     "test": "turbo run test",
+    "typesync": "npx typesync",
     "version-packages": "changeset version"
   },
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
-    "prettier": "^2.5.1",
-    "turbo": "latest"
+    "@clutchd/config": "*",
+    "@types/eslint": "^8.4.10",
+    "@types/jest": "^29.2.4",
+    "@types/prettier": "^2.7.1",
+    "eslint": "^8.26.0",
+    "jest": "^29.3.1",
+    "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
+    "turbo": "latest",
+    "typescript": "^4.9.3"
   },
-  "dependencies": {
-    "@clutchd/config": "^0.1.1",
-    "eslint-config-next": "^13.0.5",
-    "eslint-config-prettier": "^8.5.0"
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=14.0.0"
   }
 }
