--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@clutchd/config": "*",
     "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.9",
     "next": "^13.0.5",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
