--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
     "ts-jest": "^29.0.3",
