--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -20,6 +20,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^13.2.0",
     "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.9",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "react": "^18.2.0",
     "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
