--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -7,9 +7,12 @@
     "*.js"
   ],
   "dependencies": {
-    "eslint-config-next": "^13.0.5",
-    "eslint-config-prettier": "^8.3.0",
-    "next-transpile-modules": "10.0.0",
+    "@fontsource/manrope": "^4.5.6",
+    "autoprefixer": "^10.4.7",
+    "eslint-config-next": "^13.0.6",
+    "eslint-config-prettier": "^8.5.0",
+    "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
-  }
+  },
+  "devDependencies": {}
 }
