--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -19,6 +19,9 @@
     "@clutchd/config": "*",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^13.2.0",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "next-auth": "^4.10.3",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
