--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -17,12 +17,14 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "next": "^13.0.5",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
     "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
-    "typescript": "^4.8.4",
-    "next": "^13.0.5"
+    "typescript": "^4.8.4"
   },
   "peerDependencies": {
     "next": "^13.0.5",
