--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -23,6 +23,7 @@
     "@clutchd/skeleton": "*",
     "@clutchd/text": "*",
     "next": "^13.0.5",
+    "next-transpile-modules": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -32,9 +33,6 @@
     "@clutchd/tsconfig": "*",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.9",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4"
   }
 }
