--- a/package.json
+++ b/package.json
@@ -24,12 +24,8 @@
     "@types/eslint": "^8.4.10",
     "@types/jest": "^29.2.4",
     "@types/prettier": "^2.7.1",
-    "eslint": "^8.26.0",
-    "jest": "^29.3.1",
     "prettier": "^2.7.1",
-    "ts-jest": "^29.0.3",
-    "turbo": "latest",
-    "typescript": "^4.9.3"
+    "turbo": "latest"
   },
   "engines": {
     "npm": ">=7.0.0",
