--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -17,8 +17,10 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@types/jest": "^29.2.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.9",
+    "jest": "^29.3.1",
     "next": "^13.0.5",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
