--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.9",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "jest": "^29.3.1",
     "react": "^18.2.0",
     "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
