--- a/packages/flex/package.json
+++ b/packages/flex/package.json
@@ -20,6 +20,7 @@
     "@clutchd/tailwind": "0.7.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "jest": "^29.3.1",
     "next": "^13.0.5",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
