--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -19,6 +19,7 @@
     "@clutchd/config": "*",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "jest": "^29.3.1",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
     "ts-jest": "^29.0.3",
