--- a/packages/is-empty/package.json
+++ b/packages/is-empty/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
