--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -19,6 +19,7 @@
     "@clutchd/config": "*",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.9",
+    "jest": "^29.3.1",
     "next-auth": "^4.10.3",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
