--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "jest": "^29.3.1",
     "next-auth": "^4.10.3",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
