--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,7 @@
       "cache": false
     },
     "test": {
-      "dependsOn": ["build"],
+      "dependsOn": ["^build"],
       "outputs": ["coverage/**"]
     }
   }
