--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,21 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clutchd/avatar": "*",
-    "@clutchd/card": "*",
-    "@clutchd/clsx": "*",
-    "@clutchd/component": "*",
-    "@clutchd/divider": "*",
-    "@clutchd/flex": "*",
-    "@clutchd/grid": "*",
-    "@clutchd/is-empty": "*",
-    "@clutchd/layout": "*",
-    "@clutchd/link": "*",
-    "@clutchd/protect": "*",
-    "@clutchd/skeleton": "*",
-    "@clutchd/text": "*",
+    "@clutchd/layout": "^0.11.7",
+    "@clutchd/link": "^0.1.1",
+    "@clutchd/text": "^0.3.15",
     "next": "^13.0.5",
-    "next-transpile-modules": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
